Check classpath version consistency. Add 'Kotlin-version' attribute to kotlin-runtime and kotlin-reflect JARs.

--- a/build.xml
+++ b/build.xml
@@ -453,6 +453,7 @@
 
             <manifest>
                 <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+                <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
 
                 <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                 <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.javascript.stdlib}"/>
@@ -469,6 +470,7 @@
 
             <manifest>
                 <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+                <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
 
                 <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                 <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.jvm.runtime.sources}"/>
@@ -1082,6 +1084,7 @@
 
                 <manifest>
                     <attribute name="Built-By" value="${manifest.impl.vendor}"/>
+                    <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
                     <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                     <attribute name="Implementation-Title" value="@{implementation-title}"/>
                     <attribute name="Implementation-Version" value="${build.number}"/>
