+++ Check classpath version consistency. Add 'Kotlin-runtime-component' and 'Kotlin-version' attributes to kotlin-runtime and kotlin-reflect JARs.

--- a/build.xml
+++ b/build.xml
@@ -410,6 +410,7 @@
             <manifest>
                 <attribute name="Built-By" value="${manifest.impl.vendor}"/>
                 <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
+                <attribute name="${manifest.impl.attribute.kotlin.runtime.component}" value="${manifest.impl.value.kotlin.runtime.component.core}"/>
 
                 <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                 <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.javascript.stdlib}"/>
@@ -427,6 +428,7 @@
             <manifest>
                 <attribute name="Built-By" value="${manifest.impl.vendor}"/>
                 <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
+                <attribute name="${manifest.impl.attribute.kotlin.runtime.component}" value="${manifest.impl.value.kotlin.runtime.component.core}"/>
 
                 <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                 <attribute name="Implementation-Title" value="${manifest.impl.title.kotlin.jvm.runtime.sources}"/>
@@ -1067,6 +1069,8 @@
                 <manifest>
                     <attribute name="Built-By" value="${manifest.impl.vendor}"/>
                     <attribute name="${manifest.impl.attribute.kotlin.version}" value="${manifest.impl.value.kotlin.version}"/>
+                    <attribute name="${manifest.impl.attribute.kotlin.runtime.component}" value="${manifest.impl.value.kotlin.runtime.component.core}"/>
+
                     <attribute name="Implementation-Vendor" value="${manifest.impl.vendor}"/>
                     <attribute name="Implementation-Title" value="@{implementation-title}"/>
                     <attribute name="Implementation-Version" value="${build.number}"/>
