--- a/libraries/stdlib/build-docs.gradle
+++ b/libraries/stdlib/build-docs.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath files(dokka_gradle_plugin)
+        classpath fileTree(dir: '../../dokka').matching { include 'dokka-gradle-plugin-*.jar' }
     }
 }
 
@@ -25,6 +25,7 @@ task stdlib_docs(type: org.jetbrains.dokka.gradle.DokkaTask) {
         suffix = "#L"
     }
     sourceDirs = files('../../core/builtins', 'src', '../../core/reflection.jvm')
+    dokkaFatJar = fileTree(dir: '../../dokka').matching { include 'dokka-fatjar-*.jar' }.getSingleFile()
 }
 
 task stdlib_docs_zip(type: Zip) {
